--- a/config/samples/cloudamqp.com_v1alpha1_etcd.yaml
+++ b/config/samples/cloudamqp.com_v1alpha1_etcd.yaml
@@ -6,4 +6,10 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: etcd-sample
 spec:
-  # TODO(user): Add fields here
+  replicas: 1
+  dataVolumeClaim:
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: 10Gi
