--- a/config/crd/bases/cloudamqp.com.cloudamqp.com_etcds.yaml
+++ b/config/crd/bases/cloudamqp.com.cloudamqp.com_etcds.yaml
@@ -239,7 +239,7 @@ spec:
                     type: string
                 type: object
               image:
-                default: bitnami/etcd:3.5.19
+                default: quay.io/coreos/etcd:v3.5.19
                 type: string
               ports:
                 default:
