feat: Can now have communication between lavin and etcd over manual service

--- a/config/samples/cloudamqp.com_v1alpha1_etcd.yaml
+++ b/config/samples/cloudamqp.com_v1alpha1_etcd.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/name: operator-sdk
     app.kubernetes.io/managed-by: kustomize
+    app: etcd-sample
   name: etcd-sample
 spec:
   replicas: 1
