feat: Can generate and inject a lavinMQ config, and updates service on port changes

--- a/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
+++ b/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
@@ -10,6 +10,8 @@ spec:
   ports:
     - containerPort: 15672
       name: http
+    - containerPort: 5672
+      name: amqp
   dataVolumeClaim:
     accessModes:
       - ReadWriteOnce
