--- a/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
+++ b/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
@@ -26,7 +26,7 @@ spec:
       - ReadWriteOnce
     resources:
       requests:
-        storage: 10Gi
+        storage: 500Mi
 
 ---
 apiVersion: v1
