--- a/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
+++ b/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
@@ -18,7 +18,9 @@ spec:
     - containerPort: 5671
       name: amqps
   etcdEndpoints:
-    - etcd-sample:2379
+    - etcd-cluster-0.etcd-cluster.default.svc.cluster.local:2379
+    - etcd-cluster-1.etcd-cluster.default.svc.cluster.local:2379
+    - etcd-cluster-2.etcd-cluster.default.svc.cluster.local:2379
   secrets:
     - name: lavinmq-tls
   dataVolumeClaim:
