feat: restarts the statefulset upon changes to the config
Includes a way that restarts statefulset by adding annotation label if there are no changes made to the statefulset.
Also refactors Secret references to explicitly say that it is a tls secret.

closes #14

--- a/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
+++ b/config/samples/cloudamqp.com_v1alpha1_lavinmq.yaml
@@ -22,12 +22,14 @@ spec:
     - etcd-cluster-0.etcd-cluster.default.svc.cluster.local:2379
     - etcd-cluster-1.etcd-cluster.default.svc.cluster.local:2379
     - etcd-cluster-2.etcd-cluster.default.svc.cluster.local:2379
-  secrets:
-    - name: lavinmq-tls
+  tlsSecret:
+    name: lavinmq-tls
   dataVolumeClaim:
     accessModes:
       - ReadWriteOnce
     resources:
       requests:
         storage: 2Gi
+  config:
+    consumer_timeout: 20000
 
