--- a/config/crd/bases/cloudamqp.com.cloudamqp.com_lavinmqs.yaml
+++ b/config/crd/bases/cloudamqp.com.cloudamqp.com_lavinmqs.yaml
@@ -39,6 +39,12 @@ spec:
           spec:
             description: LavinMQSpec defines the desired state of LavinMQ
             properties:
+              config:
+                properties:
+                  consumer_timeout:
+                    format: int64
+                    type: integer
+                type: object
               dataVolumeClaim:
                 description: Will override the accessmode and force it to ReadWriteOnce
                 properties:
@@ -294,23 +300,21 @@ spec:
                 maximum: 3
                 minimum: 1
                 type: integer
-              secrets:
-                items:
-                  description: |-
-                    SecretReference represents a Secret Reference. It has enough information to retrieve secret
-                    in any namespace
-                  properties:
-                    name:
-                      description: name is unique within a namespace to reference
-                        a secret resource.
-                      type: string
-                    namespace:
-                      description: namespace defines the space within which the secret
-                        name must be unique.
-                      type: string
-                  type: object
-                  x-kubernetes-map-type: atomic
-                type: array
+              tlsSecret:
+                description: |-
+                  SecretReference represents a Secret Reference. It has enough information to retrieve secret
+                  in any namespace
+                properties:
+                  name:
+                    description: name is unique within a namespace to reference a
+                      secret resource.
+                    type: string
+                  namespace:
+                    description: namespace defines the space within which the secret
+                      name must be unique.
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
             required:
             - dataVolumeClaim
             type: object
