--- a/config/samples/v1alpha1_lavinmq.yaml
+++ b/config/samples/v1alpha1_lavinmq.yaml
@@ -1,8 +1,8 @@
-apiVersion: cloudamqp.com.cloudamqp.com/v1alpha1
+apiVersion: cloudamqp.com/v1alpha1
 kind: LavinMQ
 metadata:
   labels:
-    app.kubernetes.io/name: operator-sdk
+    app.kubernetes.io/name: lavinmq-operator
     app.kubernetes.io/managed-by: kustomize
     app: lavinmq-sample
   name: lavinmq-sample
