--- a/config/rbac/lavinmq_viewer_role.yaml
+++ b/config/rbac/lavinmq_viewer_role.yaml
@@ -3,21 +3,21 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: operator-sdk
+    app.kubernetes.io/name: lavinmq-operator
     app.kubernetes.io/managed-by: kustomize
   name: lavinmq-viewer-role
 rules:
-- apiGroups:
-  - cloudamqp.com.cloudamqp.com
-  resources:
-  - lavinmqs
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - cloudamqp.com.cloudamqp.com
-  resources:
-  - lavinmqs/status
-  verbs:
-  - get
+  - apiGroups:
+      - cloudamqp.com
+    resources:
+      - lavinmqs
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - cloudamqp.com
+    resources:
+      - lavinmqs/status
+    verbs:
+      - get
