--- a/.github/workflows/build-docker-on-tag.yml
+++ b/.github/workflows/build-docker-on-tag.yml
@@ -10,15 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ghcr.io/${{ github.repository_owner }}/lavinmq-operator:${{ github.ref_name }}
+      - name: Build and push Docker image
+        run: |
+          make docker-buildx docker-push build-installer
+        env:
+          IMG: ghcr.io/${{ github.repository_owner }}/lavinmq-operator:${{ github.ref_name }}
+
+      - name: Upload Installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist/install.yaml
+          path: dist/install.yaml
