--- a/.github/workflows/build-docker-on-tag.yml
+++ b/.github/workflows/build-docker-on-tag.yml
@@ -24,7 +24,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
         run: |
-          make docker-buildx docker-push build-installer
+          make docker-buildx build-installer
         env:
           IMG: ghcr.io/${{ github.repository_owner }}/lavinmq-operator:${{ github.ref_name }}
 
