--- a/.github/workflows/build-docker-on-tag.yml
+++ b/.github/workflows/build-docker-on-tag.yml
@@ -16,6 +16,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        id: create_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
       - name: Login to container registry
         uses: docker/login-action@v2
         with:
@@ -32,3 +42,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: dist/install.yaml
+      - name: Upload Release Assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/install.yaml
+          asset_name: install.yaml
+          asset_content_type: application/yaml
+
