--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -19,9 +19,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Install Kind
+      - name: Determine Architecture
+        id: arch
         run: |
-          [ $(uname -m) = aarch64 ] && curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.27.0/kind-$(uname)-arm64
+          ARCH=$(uname -m)
+          echo "ARCH=$ARCH" >> $GITHUB_OUTPUT
+
+      - name: Download kind CLI
+        run: |
+          ARCH="${{ steps.arch.outputs.ARCH }}"
+          KIND_VERSION="v0.27.0"
+          KIND_BINARY="kind-$ARCH"
+          if [[ "$ARCH" == "x86_64" ]]; then
+            KIND_BINARY="kind-linux-amd64"
+          elif [[ "$ARCH" == "aarch64" ]]; then
+            KIND_BINARY="kind-linux-arm64"
+          fi
+          curl -Lo ./kind "https://kind.sigs.k8s.io/dl/${KIND_VERSION}/${KIND_BINARY}"
           chmod +x ./kind
           sudo mv ./kind /usr/local/bin/kind
 
