--- a/.github/workflows/manifest.yaml
+++ b/.github/workflows/manifest.yaml
@@ -2,45 +2,45 @@ name: Check Manifests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   check-manifests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24'
-    
-    - name: Cache Go dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/go/pkg/mod
-          ~/.cache/go-build
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: "go.mod"
 
-    - name: Install dependencies
-      run: |
-        go mod download
-        go mod verify
+      - name: Cache Go dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
-    - name: Generate manifests and deepcopy
-      run: make manifests && make generate
+      - name: Install dependencies
+        run: |
+          go mod download
+          go mod verify
 
-    - name: Check for uncommitted changes
-      run: |
-        if [[ $(git status --porcelain) ]]; then
-          echo "There are uncommitted changes in the repository after generating manifests."
-          echo "Please run 'make manifests' and/or 'make generate' locally and commit the changes."
-          git status
-          git diff
-          exit 1
-        fi
+      - name: Generate manifests and deepcopy
+        run: make manifests && make generate
+
+      - name: Check for uncommitted changes
+        run: |
+          if [[ $(git status --porcelain) ]]; then
+            echo "There are uncommitted changes in the repository after generating manifests."
+            echo "Please run 'make manifests' and/or 'make generate' locally and commit the changes."
+            git status
+            git diff
+            exit 1
+          fi
