--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,11 +9,11 @@ patches:
   # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
   # patches here are for enabling the conversion webhook for each CRD
   - path: patches/webhook_in_lavinmqs.yaml
-# +kubebuilder:scaffold:crdkustomizewebhookpatch
+  # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
-# [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
-# patches here are for enabling the CA injection for each CRD
-#- path: patches/cainjection_in_lavinmqs.yaml
+  # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
+  # patches here are for enabling the CA injection for each CRD
+  - path: patches/cainjection_in_lavinmqs.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
