no modifying webhook

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -65,14 +65,14 @@ replacements:
           delimiter: "/"
           index: 0
           create: true
-      - select:
-          kind: MutatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: "/"
-          index: 0
-          create: true
+      # - select:
+      #     kind: MutatingWebhookConfiguration
+      #   fieldPaths:
+      #     - .metadata.annotations.[cert-manager.io/inject-ca-from]
+      #   options:
+      #     delimiter: "/"
+      #     index: 0
+      #     create: true
       - select:
           kind: CustomResourceDefinition
         fieldPaths:
@@ -96,14 +96,14 @@ replacements:
           delimiter: "/"
           index: 1
           create: true
-      - select:
-          kind: MutatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: "/"
-          index: 1
-          create: true
+      # - select:
+      #     kind: MutatingWebhookConfiguration
+      #   fieldPaths:
+      #     - .metadata.annotations.[cert-manager.io/inject-ca-from]
+      #   options:
+      #     delimiter: "/"
+      #     index: 1
+      #     create: true
       - select:
           kind: CustomResourceDefinition
         fieldPaths:
