Allow to set nodeSelector on spec in order to distribude the statefulsets pods onto desired nodes
In order to apply changes a manual delete of pod might be needed

--- a/config/crd/bases/cloudamqp.com_lavinmqs.yaml
+++ b/config/crd/bases/cloudamqp.com_lavinmqs.yaml
@@ -401,6 +401,12 @@ spec:
               image:
                 default: cloudamqp/lavinmq:2.4.1
                 type: string
+              nodeSelector:
+                additionalProperties:
+                  type: string
+                description: Selector used to select the nodes on which the pods will
+                  be scheduled.
+                type: object
               replicas:
                 default: 1
                 format: int32
